# battleships

./: .gitignore  CMakeLists.txt  LICENSE  README.md  battleships.f90  fpm.toml
app/: main.f90
src/: battleships.f90  misc.f90  sleep.c
